* added styling to input and checkbox customizer controls * fixed bug here optin type selection when adding new optin scroll up due to absence of e.preventDefault(); in the click event * fix height overflowing downwards in mailoptin branding image * fixed bug where new post notification is triggered when post is updated.

--- a/src/assets/css/admin/customizer-stylesheet.css
+++ b/src/assets/css/admin/customizer-stylesheet.css
@@ -9,3 +9,26 @@
 #sub-accordion-section-mo_wp_page_filter_display_rule_section {
     height: 100% !important;
 }
+
+/* Inputs */
+.customize-control input[type=tel], .customize-control input[type=url], .customize-control input[type=text],
+.customize-control input[type=password], .customize-control input[type=email], .customize-control input[type=number],
+.customize-control input[type=search] { width: 100%; height: 33px; }
+input[type=number] { height: 33px; }
+input[type=text], input[type=search], input[type=radio], input[type=tel], input[type=time], input[type=url],
+input[type=week], input[type=password], input[type=checkbox], input[type=color], input[type=date], input[type=datetime],
+input[type=datetime-local], input[type=email], input[type=month], input[type=number], select, textarea, input[type=text]:focus,
+input[type=search]:focus, input[type=radio]:focus, input[type=tel]:focus, input[type=time]:focus, input[type=url]:focus,
+input[type=week]:focus, input[type=password]:focus, input[type=checkbox]:focus, input[type=color]:focus, input[type=date]:focus,
+input[type=datetime]:focus, input[type=datetime-local]:focus, input[type=email]:focus, input[type=month]:focus,
+input[type=number]:focus, select:focus, textarea:focus { -webkit-box-shadow: none; box-shadow: none; }
+input, select { margin: 0; padding: 5px 10px; }
+.customize-control select { height: 33px; line-height: 1; }
+
+/* Checkbox */
+.customize-control-checkbox { position: relative; margin: 5px 0; padding: 8px 10px; border-radius: 2px; margin-bottom: -1px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.customize-control-checkbox label { padding: 0; margin: 0; }
+.customize-control-checkbox input[type=checkbox] { position: relative; width: 20px; height: 20px; margin: 0 6px 0 0; vertical-align: top; }
+.customize-control-checkbox input[type="checkbox"]:before,
+.customize-control-checkbox input[type="checkbox"]:checked:before,
+.customize-control-checkbox input[type=checkbox]:checked:before { font-size: 22px; }
